# freelancer-hub-macos

./: README.md
freelancer-hub/: .gitignore  .tsbuildinfo  .tsbuildinfo.node  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
freelancer-hub/src/: App.tsx  index.css  routes.tsx  theme.ts
freelancer-hub/src-tauri/: Cargo.toml  tauri.conf.json
freelancer-hub/src-tauri/src/: main.rs
freelancer-hub/src/components/: DashboardHeader.tsx  DashboardStats.tsx  ErrorBoundary.tsx  PageHeader.tsx  QuickActions.tsx
freelancer-hub/src/config/: database.ts
freelancer-hub/src/constants/: branding.ts
freelancer-hub/src/context/: MockDataContext.tsx  RSSContext.tsx
freelancer-hub/src/contexts/: AuthContext.tsx  DatabaseContext.tsx
freelancer-hub/src/data/: mockData.ts  mockInvoices.ts  mockNotifications.tsx  mockProjects.ts  navigationLinks.ts
freelancer-hub/src/pages/: ClientDetail.tsx  Clients.tsx  CreateClient.tsx  CreateInvoice.tsx  CreateProject.tsx  CreateTicket.tsx  Dashboard.tsx  DashboardTest.tsx  InvoiceDetail.tsx  Invoices.tsx  Login.tsx  Messages.tsx  Notifications.tsx  Profile.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx  TicketDetail.tsx  Tickets.tsx
freelancer-hub/src/routes/: index.tsx
freelancer-hub/src/services/: DatabaseService.ts
freelancer-hub/src/stores/: userSettings.ts
freelancer-hub/src/styles/: GlobalStyles.tsx  dashboard.css
freelancer-hub/src/theme/: index.ts
freelancer-hub/src/types/: index.ts  tickets.ts  (+1 more)
freelancer-hub/supabase/: config.toml
(+49 files in other folders)
