[package]
name = "freelancer-hub"
version = "0.1.0"
description = "A Tauri App for Freelancer Management"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8", features = ["api-all"] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }

[features]
custom-protocol = ["tauri/custom-protocol"]
